# GATE-Prep-Stack

./: .gitignore  Dockerfile  alembic.ini  dump.sql  front.html  gate_prep_hub.html  index.html  pyproject.toml
app/: ai_test_service.py  alembic.ini  database.py  db_models.py  frontend.py  main.py  schemas.py  streamlit_app.py
app/alembic/: env.py
app/alembic/versions/: 12e0dafb390c_id_to_uuid.py  195b317c42b1_new_schema_for_test.py  1b51b0f22274_create_tables.py  335ffd29398e_added_questions_table.py  66f08286c192_initial_schema.py  74ce67f25653_new_table.py  750844a84b74_calculate_score_validation_added.py  76054f76ae71_create_tables.py  9eca89dba49f_initial.py  c7f03915242e_added_test_table.py  d087970b7469_clean_schema.py  e3afe22e5d22_added_new_table.py
app/routes/: branches.py  papers.py  questions.py  resources.py  subjects.py  test_generator.py
app/schemas/: branches.py  enums.py  resources.py  subjects.py  tests.py
app/services/: branch_services.py  question_services.py  subject_services.py
