[project]
name = "gate"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayush Sharma",email = "sharmaayush9118@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "streamlit[pdf] (>=1.55.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
