[project]
name = "gate"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayush Sharma",email = "sharmaayush9118@gmail.com"}
]
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "streamlit[pdf] (>=1.55.0,<2.0.0)",
    "nicegui (>=3.9.0,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "openai (>=2.30.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
